# libinspector

./: .gitignore  Cargo.toml  README.md
.github/workflows/: mdbook.yml
docs/: book.toml
docs/src/: README.md
docs/src/misc/: contributors.md
src/: introspection.rs  lib.rs
src/introspection/: process.rs  segment.rs
tests/: introspection.rs  test.rs
