[package]
name = "libinspector"
description = "Multi-purpose Linux memory manipulation and interaction crate"

version = "0.1.0"
edition = "2021"

readme = "README.md"
homepage = ""
repository = "https://github.com/standard3/libinspector/"

keywords = ["memory", "scanning", "linux"]
exclude = [".github", "CONTRIBUTING.md", "CODE_OF_CONDUCT.md", "assets"]
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.82"
nix = { version = "0.28.0", features = ["user"] }
